# ShirabeEngine

./: .directory  .gitignore  .pipeline-fucntions-backup.md.kate-swp  BindlessMaterialSystem  CMakeEnvironment.generated.cmake  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakeSettings.json  CPPConApplicationHistory.odt  CPPConApplicationStatement.odt  HowTo_MaterialSystem_SPIRVTools.odp  LICENSE.MIT  README.md  countLines.sh  license.md  material_pipeline_demo.sh  pipeline-fucntions-backup.md  vulkaninfo.html
Workspace/ShirabeEngine/: CMakeLists.txt
Workspace/ShirabeEngine/BuildSystemIntegration/: LinkASIO.cmake  LinkFXGLTF.cmake  LinkJSON.cmake  LinkOpenCV.cmake  LinkShirabeEngine.cmake  LinkShirabeModuleAsset.cmake  LinkShirabeModuleCore.cmake  LinkShirabeModuleGraphicsAPI.cmake  LinkShirabeModuleLog.cmake  LinkShirabeModuleMath.cmake  LinkShirabeModuleOS.cmake  LinkShirabeModulePlatform.cmake  LinkShirabeModuleRendering.cmake  LinkShirabeModuleResources.cmake  LinkShirabeModuleUtility.cmake  LinkShirabeModuleVulkan.cmake  LinkShirabeModuleWSI.cmake  LinkVulkanSDK.cmake  LinkXML2.cmake  LinkZLIB.cmake
Workspace/ShirabeEngine/Modules/Asset/: CMakeLists.txt
Workspace/ShirabeEngine/Modules/Core/: CMakeLists.txt
Workspace/ShirabeEngine/Modules/GraphicsAPI/: CMakeLists.txt
Workspace/ShirabeEngine/Modules/Log/: CMakeLists.txt
Workspace/ShirabeEngine/Modules/Math/: CMakeLists.txt
Workspace/ShirabeEngine/Modules/OS/: CMakeLists.txt
Workspace/ShirabeEngine/Modules/Platform/: CMakeLists.txt
Workspace/ShirabeEngine/Modules/Rendering/: CMakeLists.txt
Workspace/ShirabeEngine/Modules/Resources/: CMakeLists.txt
Workspace/ShirabeEngine/Modules/Utility/: CMakeLists.txt
Workspace/ShirabeEngine/Modules/Vulkan/: CMakeLists.txt
Workspace/ShirabeEngine/Modules/WSI/: CMakeLists.txt
Workspace/ShirabeEngine/code/: countLines.sh
Workspace/ShirabeEngine/code/source/Asset/: AssetIndex.cpp  AssetStorage.cpp  AssetTypes.cpp
Workspace/ShirabeEngine/code/source/BuildingBlocks/: Scene.cpp  Transform.cpp
Workspace/ShirabeEngine/code/source/Core/: BasicTypes.cpp  Engine.cpp
Workspace/ShirabeEngine/code/source/ECWS/: MeshComponent.cpp
Workspace/ShirabeEngine/code/source/Math/: AxisAngle.cpp  Quaternion.cpp
Workspace/ShirabeEngine/code/source/Renderer/: Renderer.cpp
Workspace/ShirabeEngine/documentation/: SAE5300_FrameworkDesign.vsdx  resource_system.rst
shirabeengine/: .directory  CMakeEnvironment.generated.cmake  CMakeLists.txt  CMakeSettings.json  runCppClean.sh
shirabeengine/build_extension/propertysheets/: property_system.prop.cmake
shirabeengine/crc32generator/: CMakeLists.txt
shirabeengine/crc32generator/code/source/: applicationmain.cpp
shirabeengine/doxygen/: generateDoxygen.sh  log.md  shirabeengine.doxyconf.template  shirabeengine.doxyfile-mcss.template
shirabeengine/enginetest/: CMakeLists.txt
shirabeengine/enginetest/code/source/: test.cpp
shirabeengine/enginetest/test_files/: Default.assetindex.xml
shirabeengine/enginetest/tools/: makeFrameGraphPNG.sh
shirabeengine/game/: CMakeLists.txt
shirabeengine/game/code/source/: applicationmain.cpp
shirabeengine/game/resources/: game.assetindex.xml
shirabeengine/game/resources/textures/: BarramundiFish_baseColor.texture  BarramundiFish_normal.texture
shirabeengine/shirabe_resource_compiler/: CMakeLists.txt
shirabeengine/shirabe_resource_compiler/code/glslang_port/: directorystackfileincluder.h  resourcelimits.cpp  resourcelimits.h
shirabeengine/shirabe_resource_compiler/code/include/: definition.h  extraction.h  shadercompilationunit.h
shirabeengine/shirabe_resource_compiler/code/source/: applicationmain.cpp  extraction.cpp  shadercompilationunit.cpp
shirabeengine/shirabe_shader_precompiler/: CMakeLists.txt
shirabeengine/shirabe_shader_precompiler/code/glslang_port/: spirv-remap.cpp
shirabeengine/shirabe_shader_precompiler/code/include/: definition.h  extraction.h  helpers.h  materialserialization.h  resourcelimits.h  shadercompilationunit.h  worklist.h
shirabeengine/shirabe_shader_precompiler/code/source/: applicationmain.cpp  extraction.cpp  helpers.cpp  materialserialization.cpp  resourcelimits.cpp  shadercompilationunit.cpp
shirabeengine/shirabe_shader_precompiler/resources/shaders/: standard.frag.glsl  standard.vert
shirabeengine/shirabeengine/: CMakeLists.txt  renametolower.sh  runCppClean.sh
shirabeengine/shirabeengine/code/source/: applicationmain.cpp  materialcomponent.cpp  meshcomponent.cpp
shirabeengine/shirabeengine/documentation/: ResourceSystemNotes.vsdx  notes.md  resource_system.rst  resourcemanagerthethird.vsdx
shirabeengine/shirabeengine/modules/asset/: CMakeLists.txt
shirabeengine/shirabeengine/modules/base/: CMakeLists.txt
shirabeengine/shirabeengine/modules/core/: CMakeLists.txt
shirabeengine/shirabeengine/modules/data/: CMakeLists.txt
shirabeengine/shirabeengine/modules/graphicsapi/: CMakeLists.txt
shirabeengine/shirabeengine/modules/log/: CMakeLists.txt
shirabeengine/shirabeengine/modules/material/: CMakeLists.txt
shirabeengine/shirabeengine/modules/math/: CMakeLists.txt
shirabeengine/shirabeengine/modules/mesh/: CMakeLists.txt
shirabeengine/shirabeengine/modules/os/: CMakeLists.txt
shirabeengine/shirabeengine/modules/platform/: CMakeLists.txt
shirabeengine/shirabeengine/modules/rendering/: CMakeLists.txt
shirabeengine/shirabeengine/modules/resources/: CMakeLists.txt
shirabeengine/shirabeengine/modules/rhi/: CMakeLists.txt
shirabeengine/shirabeengine/modules/textures/: CMakeLists.txt
shirabeengine/shirabeengine/modules/utility/: CMakeLists.txt
shirabeengine/shirabeengine/modules/vulkan_integration/: CMakeLists.txt
shirabeengine/shirabeengine/modules/wsi/: CMakeLists.txt
shirabeengine/shirabeengine/modules_back/core/: CMakeLists.txt
shirabeengine/shirabeengine/modules_back/math/: CMakeLists.txt
shirabeengine/shirabeengine/modules_back/os/: CMakeLists.txt
shirabeengine/tools/: makeFrameGraphPNG.sh  makeGraphPNG.bat  pathToCRC32Uid.sh  shirabe_process_resources.sh
(+1597 files in other folders)
